[project]
name = "claude-agent-sdk-python-telemetry"
version = "0.1.0"
description = "Tiny Python lab for PromptLayer tracing with the Claude Agent SDK."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "claude-agent-sdk",
    "promptlayer[claude-agents]",
    "python-dotenv",
]

[project.scripts]
claude-agent-sdk-python-telemetry = "claude_promptlayer_python_lab.main:cli"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
