[project]
name = "openai-agent-sdk-python-telemetry"
version = "0.1.0"
description = "Minimal PromptLayer OpenAI Agents SDK tracing example"
requires-python = ">=3.9"
dependencies = [
    "promptlayer[openai-agents]",
    "python-dotenv>=1.2.0",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
py-modules = ["main"]
