[project]
name = "promptlayer-openai-agents-example"
version = "0.1.0"
description = "Minimal PromptLayer OpenAI Agents SDK tracing example"
requires-python = ">=3.9"
dependencies = [
    "fastapi>=0.115.0",
    "promptlayer[openai-agents]",
    "uvicorn[standard]>=0.30.0",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
py-modules = ["app"]
