[project]
name = "pydantic-ai-telemetry"
version = "0.1.0"
description = "Minimal Pydantic AI web chat app exporting OpenTelemetry traces to PromptLayer."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "logfire>=4.15.1",
    "opentelemetry-exporter-otlp-proto-http>=1.38.0",
    "pydantic-ai-slim[anthropic,logfire,openai,web]>=1.25.0",
    "python-dotenv>=1.2.1",
]

[tool.uv]
package = false
